[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "misinfo-patrol-env"
version = "0.1.0"
description = "Misinformation detection and monitoring environment"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ItsHaneulHaru"}
]
keywords = ["misinformation", "detection", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "gradio>=3.0",
    "torch>=2.0",
    "transformers>=4.30",
    "numpy>=1.21",
    "pandas>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/ItsHaneulHaru/MisinfoPatrolEnv"
Documentation = "https://huggingface.co/spaces/ItsHaneulHaru/MisinfoPatrolEnv"
Repository = "https://huggingface.co/spaces/ItsHaneulHaru/MisinfoPatrolEnv"

[tool.setuptools]
packages = ["misinfo_patrol"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
